<resources>
    <string name="app_name">SesionRoom</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_create">Create</string>
    <string name="nombre">Digite nombre</string>
    <string name="telefono">Digite telefono</string>
    <string name="cantidad">Digite cantidad</string>
    <string name="guardar">Guardar</string>
    <string name="title_read">Buscar</string>
    <string name="buscar">Buscar</string>
    <string name="title_update">Actualizar</string>
    <string name="actualizar">Actualizar</string>
    <string name="nuevo_telefono">Digite el nuevo telefono</string>
    <string name="nueva_cantidad">Digite la cantidad nueva</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="borrar">Eliminar</string>
    <string name="title_delete">Eliminar</string>
    <string name="deudor_list">Nombre del Deudor</string>
    <string name="deuda_list">Deuda</string>
    <string name="title_list">Lista</string>


    <string name="correo_electronico">Correo Electrónico</string>
    <string name="password">Contraseña</string>
    <string name="iniciar_sesion">LOGIN</string>
    <string name="registrarse">Ir a Registro</string>

    <string name="digitar_nombre">Nombre</string>
    <string name="digitar_correo">Correo electronico</string>
    <string name="digitar_contrasena">Contraseña</string>
    <string name="digitar_rcontrasena">Repetir contraseña</string>
    <string name="rb1">Masculino</string>
    <string name="rb2">Femenino</string>

    <string name="registrar">Registrarse</string>
    <string name="text_resultado">Resultado</string>
    <string name="tv_fecha">"Fecha de nacimiento:"</string>
    <string name="hint_fecha">dd/mm/yy</string>
    <string name="menu_cerrarsesion">Cerrar Sesión</string>
    <string name="correo_texto"> Correo :</string>
    <string name="terminos"><![CDATA[Terminos & Condiciones]]></string>
    <string name="registrate">Registrarse</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="inventario">INVENTARIO</string>
    <string name="compras">COMPRAS Y ORDENES</string>
    <string name="clientes">CLIENTES</string>
    <string name="estadisticas">ESTADISTICAS Y REPORTES</string>
    <string name="tereas">TAREAS</string>
    <string name="new_element">Nuevo Elemento</string>

    <string name="nuevo_elemento">Nuevo Elemento</string>
    <string name="tipo_elemento">Tipo de Elemento</string>
    <string name="rb1_producto">Producto</string>
    <string name="rb2_servivio">Servivio</string>
</resources>