<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_create">

    <fragment
        android:id="@+id/navigation_create"
        android:name="com.teo.sesionroom.ui.create.CreateFragment"
        android:label="@string/title_create"
        tools:layout="@layout/fragment_create" />

    <fragment
        android:id="@+id/navigation_read"
        android:name="com.teo.sesionroom.ui.dashboard.ReadFragment"
        android:label="@string/title_read"
        tools:layout="@layout/fragment_read" />

    <fragment
        android:id="@+id/navigation_update"
        android:name="com.teo.sesionroom.ui.update.UpdateFragment"
        android:label="@string/title_update"
        tools:layout="@layout/fragment_update" />
    <fragment
        android:id="@+id/navigation_delete"
        android:name="com.teo.sesionroom.ui.delete.DeleteFragment"
        android:label="@string/title_delete"
        tools:layout="@layout/fragment_delete" />

    <fragment
        android:id="@+id/navigation_list"
        android:name="com.teo.sesionroom.ui.list.ListFragment"
        android:label="Lista de deudores"
        tools:layout="@layout/fragment_list" />

</navigation>