<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="327dp"
        android:layout_height="303dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        app:srcCompat="@drawable/duedor" />



    <EditText
        android:id="@+id/et_Correo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/form_bt_circle_darkness"
        android:ems="10"
        android:hint="@string/correo_electronico"
        android:inputType="textEmailAddress"
        android:padding="6dp"
        android:textColor="@android:color/black"
        android:textColorHighlight="@color/chocolate"
        android:textColorHint="@android:color/background_light"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/et_Contra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/form_bt_circle_darkness"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="6dp"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/white"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:padding="10dp">

        <Button
            android:id="@+id/bt_iniciarsesion"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@drawable/bt_login_activity"
            android:text="@string/iniciar_sesion"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <Button

            android:id="@+id/tv_registrar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@drawable/bt_singup"
            android:text="@string/registrarse"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="14sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/terminos"
        android:textAlignment="center"
        android:textColor="@android:color/black" />

</LinearLayout>