<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"

    android:padding="8dp"
    tools:context=".RegistroActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbarTrackVertical="@color/black"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="30dp"
                android:fontFamily="@font/nunito_extralight"
                android:text="@string/registrate"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_Nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/form_bt_circle"
                android:fontFamily="@font/nunito_extralight"
                android:hint="@string/digitar_nombre"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                android:autofillHints="" />

            <EditText
                android:id="@+id/et_Correo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/form_bt_circle"
                android:fontFamily="@font/nunito_extralight"
                android:hint="@string/digitar_correo"
                android:inputType="textEmailAddress"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                android:autofillHints="" />

            <EditText
                android:id="@+id/et_Contrasena"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/form_bt_circle"
                android:fontFamily="@font/nunito_extralight"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_Rcontrasena"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/form_bt_circle"
                android:fontFamily="@font/nunito_extralight"
                android:hint="@string/digitar_rcontrasena"
                android:inputType="textPassword"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:fontFamily="@font/nunito_extralight"
                android:text="Genero:"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_Maculino"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="16dp"
                    android:buttonTint="@color/business"
                    android:checked="true"
                    android:fontFamily="@font/nunito_extralight"
                    android:text="@string/rb1" />

                <RadioButton
                    android:id="@+id/rb_Femenino"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:checked="false"
                    android:fontFamily="@font/nunito_extralight"
                    android:text="@string/rb2" />
            </RadioGroup>

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/nunito_extralight"
                android:text="@string/tv_fecha"
                android:textColor="@android:color/black"
                android:textSize="16sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/tvFecha"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:focusable="false"
                android:hint="@string/hint_fecha"
                android:inputType="date"
                android:textAlignment="center"
                android:textSize="16sp" />

            <ImageButton
                android:id="@+id/iv_calendar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:background="@color/colormio"
                app:srcCompat="@android:drawable/ic_menu_my_calendar"
                tools:ignore="ContentDescription" />
        </LinearLayout>

            <Button
                android:id="@+id/btRegistrar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:background="@drawable/form_bt_circle"
                android:padding="10dp"
                android:text="@string/registrar"
                android:textColor="@color/black"
                android:textSize="18sp" />


        </LinearLayout>


    </ScrollView>


</LinearLayout>